# cgt

./: .gitignore  CMakeLists.txt  config.h.in
cmake/: FindFFTW3.cmake  TargetBuildPCH.cmake
dep/tinyxml/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in  fft.design
doc/poc/: notes.py  test.py
include/cgt/: cgt.h
include/cgt-cli/: cgt-cli.h
include/cgt-common/: cgt-common.h  cgt-compat.h
include/cgt-common/alsa/: Error.h  Error.inl  Pcm.h  Pcm.inl
include/cgt-common/config/: ArgvParser.h  ConfigMgr.h  XmlParser.h
include/cgt-common/core/: Analyser.h  FftAnalyser.h
include/cgt-common/db/: IField.h  IParameter.h  TextValue.h  TextValue.inl
include/cgt-common/except/: Except.h  Except.inl
include/cgt-common/fft/: Core.h
include/cgt-common/stats/: AverageRing.h  AverageRing.inl  Derivative.h  Derivative.inl  ICounter.h  IFilter.h  IParent.h  Maximum.h  Maximum.inl  Periodic.h  Periodic.inl
include/cgt-common/util/: Harmonics.h  Misc.h  SafeMem.h  Singleton.h  Tone.h
include/cgt-curses/: cgt-curses.h
include/cgt-curses/curses/: ConfigList.h  LibInit.h  MagnitudeBar.h  NoteList.h  Observer.h  Screen.h  TunerBar.h  Window.h  Window.inl
include/cgt/alsa/: Error.h  Error.inl  Pcm.h  Pcm.inl
include/cgt/fft/: Core.h
include/cgt/util/: SafeMem.h
src/cgt/: CMakeLists.txt  cgt.cpp
src/cgt-cli/: CMakeLists.txt  cgt-cli.cpp
src/cgt-common/: CMakeLists.txt  cgt-compat.cpp
src/cgt-common/config/: ArgvParser.cpp  XmlParser.cpp
src/cgt-common/core/: Analyser.cpp  FftAnalyser.cpp
src/cgt-common/db/: TextValue.cpp
src/cgt-common/fft/: Core.cpp
src/cgt-common/util/: Harmonics.cpp  Misc.cpp  Tone.cpp
src/cgt-curses/: CMakeLists.txt  cgt-curses.cpp
src/cgt-curses/curses/: ConfigList.cpp  MagnitudeBar.cpp  NoteList.cpp  Observer.cpp  Screen.cpp  TunerBar.cpp
src/cgt/fft/: Core.cpp
src/cgt/util/: Misc.cpp
